# jirafy-desktop

./: .gitignore  CMakeLists.txt  Desktop.sln  README.md  appveyor.yml  build.bat  build.py  build_debug.bat  conanfile.txt  version.ps1
.github/workflows/: ccpp.yml
profiles/: ProfileWin32MT
src/: Desktop.sln
src/DesktopApp/: CMakeLists.txt  DesktopApp.aps  DesktopApp.cpp  DesktopApp.rc  DesktopApp.vcxproj  DesktopApp.vcxproj.filters  DesktopAppDlg.cpp  DesktopAppDlg.h  DesktopAppFrame.cpp  DesktopAppFrame.h  Events.h  FrameWindow.cpp  FrameWindow.h  main.cc  resource.h
src/DesktopApp/Browser/: BrowserApp.cpp  BrowserClientHandler.cpp  BrowserScreen.cpp  BrowserScreen.h
src/DesktopApp/Services/: DownloadViewerService.cpp  DownloadViewerService.h
src/DesktopApp/browser/: client_app_browser.cc  client_handler.cc  main_context.h  main_context_impl.h  main_context_impl_win.cc  main_message_loop_external_pump_win.cc  osr_window_win.cc  test_runner.cc
src/DesktopApp/common/: client_switches.cc  scheme_test_common.cc
src/DesktopApp/renderer/: client_renderer.cc
src/DesktopApp/resources/win/: resources.aps  resources.rc
src/DesktopAppW7/: DesktopApp.cpp  DesktopAppDlg.h  DesktopAppW7.vcxproj
src/DesktopCore/: CMakeLists.txt  DesktopCore.vcxproj  DesktopCore.vcxproj.filters
src/DesktopCore/Network/Agents/: FileServerAgent.cpp  FileServerAgent.h
src/DesktopCore/Network/Services/: DownloadFileService.cpp  DownloadFileService.h
src/DesktopCore/System/Services/: ApplicationDataService.cpp  CrashReportService.h  FileIOService.h
src/DesktopCore/Upgrade/Agents/: UpgradeDesktopAgent.cpp  UpgradeDesktopAgent.h  UpgradeViewerAgent.cpp  UpgradeViewerAgent.h
src/DesktopInstaller/: DesktopInstaller.vbproj  Installer.nsi
src/DesktopUI/css/: style.css
